# The-Evolution-of-Todo

./: .gitignore  BACKEND-TEST-RESULTS.md  CLAUDE.md  FULLSTACK-TEST-RESULTS.md  PHASE-II-COMPLETE.md  QUICK-START.md  README.md  TEST-RESULTS.md  TESTING-E2E.md  TESTING-SUMMARY.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .env.production.example  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING.md  debug_imports.py  debug_server_call.py  generate_custom_token.py  generate_multiple_tokens.py  generate_test_token.py  generate_uuid_token.py  minimal_test.py  pyproject.toml  test_api.sh  test_password.py  test_todo.db
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/auth/: __init__.py  jwt.py  password.py  password_temp.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routers/: __init__.py  auth.py  chat.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  chat.py  task.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  task_service.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  FRONTEND_README.md
specs/: architecture.md  overview.md
src/: cli.py  models.py  services.py  store.py
subagents/: README.md  cloud-native-deployer.subagent.md  fastapi-backend-expert.subagent.md  jwt-authentication-specialist.subagent.md  nextjs-frontend-architect.subagent.md  openai-chatbot-agent.subagent.md  sqlmodel-database-designer.subagent.md
(+40 files in other folders)
